--- a/CV web.html
+++ b/CV web.html
@@ -141,6 +141,14 @@
                   <p><em>Adalid Chile, AwakeLab</em></p>
                   <p>Participé en Bootcamp de 5 meses, con asistencias síncronas y asíncronas</p>
                 </div>
+                <h3 class="resume-title"></h3>
+
+                <div class="resume-item">
+                  <h4>Curso Lenguaje JavaScript</h4>
+                  <h5>2023</h5>
+                  <p><em>Sence/Movistar Fundación Telefónica</em></p>
+                  <p>Desarrollé curso de 40 horas </p>
+                </div>
 
                 <h3 class="resume-title"></h3>
                 <div class="resume-item">
@@ -149,6 +157,15 @@
                   <p><em>Código Facilito</em></p>
                   <p>Participé en Bootcamp modalidad asíncrona con temas tales cómo tipos de datos, constantes, operadores, casting, manejo de la clase String, ciclos, condiciones, arreglo, matrices, arreglos multidimensionales, clases, objetos, interfaces, clases abstractas, paquetes, API`s, lectura de datos por teclado y así como las nuevas características de JAVA 10.</p>
                 </div>
+
+                <div class="resume-item">
+                  <h4>Diseño Web HTML5 y CSS</h4>
+                  <h5>2023</h5>
+                  <p><em>Sence/Movistar Fundación Telefónica</em></p>
+                  <p>Desarrollé curso de 30 horas </p>
+                </div>
+
+
 
                 <div class="resume-item">
                   <h4>Inducción a la Programación</h4>
@@ -191,7 +208,8 @@
           <p>Python</p>
           <p>Django</p>
           <p>Java</p>
-          <p>Html</p>
+          <p>JavaScript</p>
+          <p>Html5</p>
           <p>Css</p>
           <p>GitHub</p>
           <p>Postgres</p>
@@ -498,6 +516,22 @@
                 <h5>Aplication development</h5>
               </div>
             </div>
+            <div class="swiper-slide">
+              <div class="testimonial-item" data-aos="fade-up" >
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Don Hernán ha demostrado enorme interés en el aprendizaje de herramientas para trabajar junto a equipos de trabajos
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+                <img src="" class="testimonial-img" alt="">
+                <h3>Daniela Gonzalez Molina</h3>
+                <h4>Developer Full Stack</h4>
+                <h5>Sw - App - Cloud Tech Support 
+                  Accenture-Chile</h5>
+              </div>
+            </div>
+
+
 
 
 
@@ -628,7 +662,7 @@
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
         <!--Designed by <h6> Herán Robles R</h6>-->
       </div>
